--- a/index.html
+++ b/index.html
@@ -4,99 +4,182 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FacilitaGov</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
       font-family: Arial, sans-serif;
-      background-color: #ffffff; /* branco principal */
+      background-color: #ffffff;
+    }
+
+    /* Estilo da navbar */
+    .logo-custom {
+      font-weight: bold;
+      font-size: 1.5rem;
+    }
+
+    .logo-custom span:nth-child(1) {
+      color: #2c9b2c;
+    }
+
+    .logo-custom span:nth-child(2) {
+      color: #f4c200;
+    }
+
+    .logo-custom span:nth-child(3) {
+      color: #2c9b2c;
+    }
+
+    .logo-custom span:nth-child(4) {
+      color: #004aad;
+    }
+
+    .btn-gov {
+      background-color: #004aad;
+      color: white;
+      border-radius: 30px;
+      padding: 6px 16px;
+    }
+
+    .btn-gov:hover {
+      background-color: #00307e;
     }
 
     .container {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 40px 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      padding: 20px;
     }
 
-    .titulo-principal {
-      font-size: 2rem;
-      margin-bottom: 40px;
-      text-align: center;
-      color: #004aad;
+    .content {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .text-content {
+      max-width: 600px;
+    }
+
+    .text-content h1 {
+      font-size: 2.5em;
+      color: #2c9b2c;
+      margin-bottom: 20px;
+    }
+
+    .text-content p {
+      font-size: 1.2em;
+      color: #333;
+    }
+
+    .image-content img {
+      max-width: 100%;
+      height: auto;
     }
 
     .circulos {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-      gap: 40px;
-      width: 100%;
-      justify-items: center;
-    }
-
-    .topico {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+      margin-top: 40px;
     }
 
     .circulo {
-      width: 120px;
-      height: 120px;
+      width: 150px;
+      height: 150px;
+      background-color: #f4f4f4;
       border-radius: 50%;
-      background-color: #004aad; /* azul para destaque */
       display: flex;
       align-items: center;
       justify-content: center;
-      overflow: hidden;
-    }
-
-    .circulo img {
-      width: 80%;
-      height: 80%;
-      object-fit: contain;
-    }
-
-    .nome-topico {
-      margin-top: 10px;
-      font-size: 1rem;
-      color: #004aad;
       text-align: center;
+      padding: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
     }
 
-    @media (max-width: 600px) {
-      .circulos {
-        grid-template-columns: repeat(2, 1fr);
+    .circulo:hover {
+      transform: scale(1.05);
+    }
+
+    @media (max-width: 768px) {
+      .text-content h1 {
+        font-size: 2em;
+      }
+
+      .text-content p {
+        font-size: 1em;
+      }
+
+      .circulo {
+        width: 120px;
+        height: 120px;
+        .carrossel {
+    display: none;
       }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1 class="titulo-principal">FacilitaGov - Acesso Rápido e Simples</h1>
-    <div class="circulos">
-      <div class="topico">
-        <div class="circulo"><img src="img/documentos.png" alt="Documentos" /></div>
-        <p class="nome-topico">Documentos Pessoais</p>
-      </div>
-      <div class="topico">
-        <div class="circulo"><img src="img/impostos.png" alt="Impostos" /></div>
-        <p class="nome-topico">Impostos e Tributos</p>
-      </div>
-      <div class="topico">
-        <div class="circulo"><img src="img/saude.png" alt="Saúde" /></div>
-        <p class="nome-topico">Saúde</p>
-      </div>
-      <div class="topico">
-        <div class="circulo"><img src="img/educacao.png" alt="Educação" /></div>
-        <p class="nome-topico">Educação</p>
-      </div>
-      <div class="topico">
-        <div class="circulo"><img src="img/trabalho.png" alt="Trabalho" /></div>
-        <p class="nome-topico">Trabalho e Emprego</p>
+
+  <!-- Navbar Bootstrap -->
+  <nav class="navbar navbar-expand-lg bg-light px-3">
+    <div class="container-fluid">
+      <a class="navbar-brand logo-custom" href="#">
+        <span>f</span><span>a</span><span>c</span><span>ilita</span><span>.</span><span>gov</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-between" id="navbarContent">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#">Suporte</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Sobre Nós</a></li>
+        </ul>
+        <button class="btn btn-gov">Entrar com gov</button>
       </div>
     </div>
-  </div>
+  </nav>
+
+  <!-- Conteúdo principal -->
+  <section class="container">
+    <div class="content">
+      <div class="text-content">
+        <h1>Facilitando o acesso ao Governo</h1>
+        <p>
+          Centralizamos serviços essenciais para simplificar sua interação com órgãos governamentais. Acesse facilmente documentos, informações e muito mais.
+        </p>
+      </div>
+      <!-- o carai do carrosel -->
+      <div class="carrossel"> 
+  <img src="img/carrossel1.png" alt="Imagem 1" />
+  <img src="img/carrossel2.png" alt="Imagem 2" />
+  <img src="img/carrossel3.png" alt="Imagem 3" />
+</div>
+    </div>
+
+    <div class="circulos">
+       <div class="circulo">Emissão de Documentos</div>
+  <div class="circulo">Agendamentos</div>
+  <div class="circulo">Consultas</div>
+  <div class="circulo">Serviços Online</div>
+  <div class="circulo">Atendimento Virtual</div>
+    </div>
+  </section>
+
+  <!-- Bootstrap JS (para funcionamento do menu responsivo) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
