--- a/index.html
+++ b/index.html
@@ -8,128 +8,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #ffffff;
-    }
-
-    /* Estilo da navbar */
-    .logo-custom {
-      font-weight: bold;
-      font-size: 1.5rem;
-    }
-
-    .logo-custom span:nth-child(1) {
-      color: #2c9b2c;
-    }
-
-    .logo-custom span:nth-child(2) {
-      color: #f4c200;
-    }
-
-    .logo-custom span:nth-child(3) {
-      color: #2c9b2c;
-    }
-
-    .logo-custom span:nth-child(4) {
-      color: #004aad;
-    }
-
-    .btn-gov {
-      background-color: #004aad;
-      color: white;
-      border-radius: 30px;
-      padding: 6px 16px;
-    }
-
-    .btn-gov:hover {
-      background-color: #00307e;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    .content {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-    }
-
-    .text-content {
-      max-width: 600px;
-    }
-
-    .text-content h1 {
-      font-size: 2.5em;
-      color: #2c9b2c;
-      margin-bottom: 20px;
-    }
-
-    .text-content p {
-      font-size: 1.2em;
-      color: #333;
-    }
-
-    .image-content img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    .circulos {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
-      margin-top: 40px;
-    }
-
-    .circulo {
-      width: 150px;
-      height: 150px;
-      background-color: #f4f4f4;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-    }
-
-    .circulo:hover {
-      transform: scale(1.05);
-    }
-
-    @media (max-width: 768px) {
-      .text-content h1 {
-        font-size: 2em;
-      }
-
-      .text-content p {
-        font-size: 1em;
-      }
-
-      .circulo {
-        width: 120px;
-        height: 120px;
-        .carrossel {
-    display: none;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="Estilos/style.css">
 </head>
 <body>
 
@@ -137,7 +16,7 @@
   <nav class="navbar navbar-expand-lg bg-light px-3">
     <div class="container-fluid">
       <a class="navbar-brand logo-custom" href="#">
-        <span>f</span><span>a</span><span>c</span><span>ilita</span><span>.</span><span>gov</span>
+        <span>f</span><span>a</span><span>c</span><span>i</span><span>l</span><span>i</span><span>t</span><span>a</span><span>.</span><span>g</span><span>o</span><span>v</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
         <span class="navbar-toggler-icon"></span>
