--- a/index.html
+++ b/index.html
@@ -43,22 +43,73 @@
       </div>
       <!-- o carai do carrosel -->
       <div class="carrossel"> 
-  <img src="img/carrossel1.png" alt="Imagem 1" />
-  <img src="img/carrossel2.png" alt="Imagem 2" />
-  <img src="img/carrossel3.png" alt="Imagem 3" />
+  <img src="Imagens/img1carrossel.png" alt="Imagem 1" />
+  <img src="Imagens/img2carrossel.png" alt="Imagem 2" />
+  <img src="Imagens/img3carrossel.png" alt="Imagem 3" />
 </div>
     </div>
 
     <div class="circulos">
-       <div class="circulo">Emissão de Documentos</div>
-  <div class="circulo">Agendamentos</div>
-  <div class="circulo">Consultas</div>
-  <div class="circulo">Serviços Online</div>
-  <div class="circulo">Atendimento Virtual</div>
+       <div class="circulo"><p>Emissão de Documentos</p></div>
+
+  <div class="circulo"><p>Agendamentos</p></div>
+
+  <div class="circulo"><p>Consultas</p></div>
+
+  <div class="circulo"><p>Serviços Online</p></div>
+  
+  <div class="circulo"><p>Atendimento Virtual</p></div>
     </div>
   </section>
 
   <!-- Bootstrap JS (para funcionamento do menu responsivo) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+  const imagens = document.querySelectorAll('.carrossel img');
+  let index = 0;
+
+  function mostrarProximaImagem() {
+    imagens.forEach((img, i) => {
+      img.classList.remove('ativa');
+    });
+
+    imagens[index].classList.add('ativa');
+    index = (index + 1) % imagens.length;
+  }
+
+  mostrarProximaImagem(); // Mostra a primeira
+  setInterval(mostrarProximaImagem, 4000); // Troca a cada 2 segundos
+</script>
+</script>
+
+<footer class="footer mt-5 bg-light text-center text-lg-start">
+  <div class="container p-4">
+    <div class="row">
+
+      <div class="col-lg-6 col-md-12 mb-4">
+        <h5 class="text-uppercase">FacilitaGov</h5>
+        <p>
+          Tornando o acesso aos serviços públicos mais simples, rápido e eficiente para todos os cidadãos.
+        </p>
+      </div>
+
+      
+
+      <div class="col-lg-3 col-md-6 mb-4">
+        <h5 class="text-uppercase">Conecte-se</h5>
+        <ul class="list-unstyled mb-0">
+          <li><a href="#" class="text-dark text-decoration-none">Instagram</a></li>
+          <li><a href="#" class="text-dark text-decoration-none">LinkedIn</a></li>
+          <li><a href="#" class="text-dark text-decoration-none">Email</a></li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="text-center p-3 bg-dark text-white">
+    © 2025 FacilitaGov - Todos os direitos reservados.
+  </div>
+</footer>
 </body>
 </html>
