fundo dos circukis

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
     </div>
 
     <div class="circulos">
-       <div class="circulo"><p>Emissão de Documentos</p></div>
+       <div class="circulo" id="circulofoto1"><p>Emissão de Documentos</p></div>
 
-  <div class="circulo"><p>Agendamentos</p></div>
+  <div class="circulo" id="circulofoto2"><p>Agendamentos</p></div>
 
-  <div class="circulo"><p>Consultas</p></div>
+  <div class="circulo" id="circulofoto3"><p>Consultas</p></div>
 
-  <div class="circulo"><p>Serviços Online</p></div>
+  <div class="circulo" id="circulofoto4"><p>Serviços Online</p></div>
   
-  <div class="circulo"><p>Atendimento Virtual</p></div>
+  <div class="circulo" id="circulofoto5"><p>Atendimento Virtual</p></div>
     </div>
   </section>
 
