--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
 
     <div class="circulos">
        <a href="meuperfil.html">
-         <div class="circulo" id="circulofoto1" ><p>Meu Perfil</p></div>
+         <div class="circulo" id="circulofoto1" ></div><p>Meu Perfil</p>
        </a>
 
   <a href="meuveiculo.html">
-    <div class="circulo" id="circulofoto2"><p>Meu Veículo</p></div>
+    <div class="circulo" id="circulofoto2"></div><p>Meu Veículo</p>
   </a>
 
   <a href="MinhaAposentadoria.html">
-    <div class="circulo" id="circulofoto3"><p>Minha Aposentadoria</p></div>
+    <div class="circulo" id="circulofoto3"></div><p>Minha Aposentadoria</p>
   </a>
 
   <a href="meunegocio.html">
-    <div class="circulo" id="circulofoto4"><p>Meu Negócio</p></div>
+    <div class="circulo" id="circulofoto4"></div><p>Meu Negócio</p>
   </a>
   
   <a href="minhasaude.html">
-    <div class="circulo" id="circulofoto5"><p>Minha Saúde</p></div>
+    <div class="circulo" id="circulofoto5"></div><p>Minha Saúde</p>
   </a>
     </div>
   </section>
