--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <img src="Imagens/img3carrossel.png" alt="Imagem 3" />
 </div>
     </div>
-
+<h3>Serviços Disponíveis Online</h3>
     <div class="circulos">
        <a href="meuperfil.html">
          <div class="circulo" id="circulofoto1" ></div><p>Meu Perfil</p>
@@ -88,7 +88,7 @@
   }
 
   mostrarProximaImagem(); // Mostra a primeira
-  setInterval(mostrarProximaImagem, 4000); // Troca a cada 2 segundos
+  setInterval(mostrarProximaImagem, 4000); // Troca a cada 4 segundos
 </script>
 </script>
 
@@ -108,9 +108,9 @@
       <div class="col-lg-3 col-md-6 mb-4">
         <h5 class="text-uppercase">Conecte-se</h5>
         <ul class="list-unstyled mb-0">
-          <li><a href="#" class="text-dark text-decoration-none">Instagram</a></li>
-          <li><a href="#" class="text-dark text-decoration-none">LinkedIn</a></li>
-          <li><a href="#" class="text-dark text-decoration-none">Email</a></li>
+          <li><a href="https://www.instagram.com/digitalgov.br/" target="_blank" class="text-dark text-decoration-none">Instagram</a></li>
+          <li><a href="https://www.linkedin.com/company/governo-do-brasil/" target="_blank"  class="text-dark text-decoration-none">LinkedIn</a></li>
+          <li><a href="https://www.gov.br/governodigital/pt-br/acessibilidade-e-usuario/atendimento-gov.br"  target="_blank"  class="text-dark text-decoration-none">Email</a></li>
         </ul>
       </div>
 
