--- a/minhasaude.html
+++ b/minhasaude.html
@@ -62,8 +62,7 @@
 
         <div class="info-item">
           <a href="" class="link-dado"> • Ver exames</a>
-          <div class="info-text">Últimos exames realizados em 14/04/2025,
-o</div>
+          <div class="info-text">Últimos exames realizados em 14/04/2025</div>
         </div>
 
         <div class="info-item">
