--- a/meuveiculo.html
+++ b/meuveiculo.html
@@ -67,7 +67,7 @@
 
         <div class="info-item">
           <a href="" class="link-dado"> • Licenciamento</a>
-          <div class="info-text">Válido até 31/12/2025</div>
+          <div class="info-text">898 0016 4724 8701</div>
         </div>
       </div>
 
