--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarContent">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Suporte</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Sobre Nós</a></li>
+          <li class="nav-item"><a class="nav-link" href="suporte.html">Suporte</a></li>
+          <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+          <li class="nav-item"><a class="nav-link" href="sobrenos.html">Sobre Nós</a></li>
         </ul>
         <button class="btn btn-gov">Entrar com gov</button>
       </div>
